Incompleto porque falta hacer la base de datos. Además tiene mi contraseña y user